--- a/zwpa_app/app/views/walkthroughs/edit.html.erb
+++ b/zwpa_app/app/views/walkthroughs/edit.html.erb
@@ -2,6 +2,6 @@
 
 <%= render 'form' %>
 
-<div class="sticky-footer">
-	<%= render 'bottom_bar' %>
-</div>
+<!-- <div class="sticky-footer">
+	<%#= render 'bottom_bar' %>
+</div> -->
