removed dead code in audit show and added start & end date in audit summary partial on home page view

--- a/app/views/home/_recent_audits.html.erb
+++ b/app/views/home/_recent_audits.html.erb
@@ -2,8 +2,8 @@
   <tr>
     <th width="200">Client</th>
     <th width="120">Generator</th>
-    <th width="120">Date</th>
-    <th></th>
+    <th width="120">Start Date</th>
+    <th width="120">End Date</th>
   </tr>
 
   <% audits.each do |audit| %>
