audit show page

--- a/app/views/audits/_form.html.erb
+++ b/app/views/audits/_form.html.erb
@@ -15,15 +15,14 @@
     <div class="row">
       <div class="span7">
         <fieldset>
-          <legend><%= controller.action_name.capitalize %> Audit</legend>
+          <legend>Audit Details</legend>
           
           <div class="reqid" style="display: none;">
            <%= audit_form.input :request_id, input_html: {value: @req_id} %>  
            </div>         
-           <%= audit_form.input :start_date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter Start Date"}, label: false %>
-           <%= audit_form.input :end_date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter End Date"}, label: false %>
-           <%= audit_form.label :generator %><br>
-           <%= audit_form.input :generator, :collection => ['Landfill', 'Recycle', 'Compost'], :as => :radio_buttons, label: '' %>
+           <%= audit_form.input :start_date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter Start Date"}, label: 'Start Date' %>
+           <%= audit_form.input :end_date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter End Date"}, label: 'End Date' %>
+           <%= audit_form.input :generator, :collection => ['Landfill', 'Recycle', 'Compost'], :as => :radio_buttons, label: 'Generator' %>
            <%= audit_form.label :location %><br>       
            <%= audit_form.text_field :location %>
 
@@ -31,7 +30,8 @@
       </div>
 
     <div class="span5">
-      <legend>Items</legend>
+      <fieldset>
+      <legend>Waste Items</legend>
         <div id="wastes">
         <%= simple_nested_form_for @audit do |f| %>
            <%= f.fields_for :wastes do |waste_form| %>
@@ -40,16 +40,17 @@
               Weight: <%= waste_form.text_field :weight %>
               Origin:<%= waste_form.text_field :origin %>
           <% end %>
-          <p><%= f.link_to_add "Add a item", :wastes %></p>          <% end %> 
+          <p><%= f.link_to_add "+ Add an item", :wastes, class: 'button round tiny left' %></p>          <% end %> 
           <p>
             <br /><%#= audit_form.link_to_add("Add Item", :wastes, :class => 'button tiny') %>
           </p>
         </div> 
+        </fieldset>
       </div>
 
 
 
   <div class="actions">
-    <%= audit_form.submit %>
+    <%= audit_form.submit "Save Audit", class: 'button' %>
   </div>
 <% end %>
