removed javascript from top nav still needs testing

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="contain-to-grid sticky">
-    <nav class="top-bar top-margin" data-options="scrolltop:false" data-topbar role="navigation">
+    <nav class="top-bar" data-options="scrolltop:false" data-topbar role="navigation">
       <ul class="title-area">
         <li class="name">
           <h1>
