potential fix for bottom bar

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,11 +10,6 @@
 }
 
 
-
-
-
-
-
 .bottom-bar {
   color:white;
   //background-color: rgba(15,52,15, .5);
@@ -31,8 +26,9 @@
 }
 
 .bottom-button{
+	color:white;
 	display:inline-block;
-	width:49.4%;
+	width:49%;
 	background-color: rgba(139,137,137, .9);
 	text-align:center;
 	border-radius:4px;
