added link to help in nav partial

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -16,7 +16,7 @@
           <li><%= link_to 'Clients', customers_path %></li>
           <li><%= link_to 'Requests', requests_path %></li>
           <li><%= link_to 'Audits', audits_path %></li>
-          <li><a href="#">Help</a></li>
+          <li><a href="/help.html">Help</a></li>
         </ul>
 
         <!-- Left Nav Section -->
