--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -318,15 +318,15 @@ $white       : #FFFFFF;
 // $include-html-accordion-classes: $include-html-classes;
 
 // $accordion-navigation-padding: rem-calc(16);
-// $accordion-navigation-bg-color: $silver;
-// $accordion-navigation-hover-bg-color: scale-color($accordion-navigation-bg-color, $lightness: -5%);
-// $accordion-navigation-active-bg-color: scale-color($accordion-navigation-bg-color, $lightness: -3%);
-// $accordion-navigation-font-color: $jet;
+$accordion-navigation-bg-color: #a8a8a8;
+$accordion-navigation-hover-bg-color: scale-color(#40C5F7, $lightness: -5%);
+$accordion-navigation-active-bg-color: scale-color(#40C5F7, $lightness: -3%);
+$accordion-navigation-font-color: WHITE;
 // $accordion-navigation-font-size: rem-calc(16);
 // $accordion-navigation-font-family: $body-font-family;
 
 // $accordion-content-padding: ($column-gutter/2);
-// $accordion-content-active-bg-color: $white;
+$accordion-content-active-bg-color: #f6f6f6;
 
 // 02. Alert Boxes
 // - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -1445,5 +1445,21 @@ $topbar-dropdown-link-bg: rgba(15,52,15, .7);
 // $include-table-visibility-classes: true;
 // $include-legacy-visibility-classes: true;
 // $include-accessibility-classes: true;
+
+.accordion-navigation{
+	h4{
+		color:WHITE;
+	}
+     a:before{
+       content: "+";
+       font-size: 1.2em;
+       padding-right: rem-calc(15);
+       float:left;
+     }
+     &.active a:before{
+       content: "-";
+       float:left;
+     }
+   }
 
 @import 'foundation';
