--- a/app/views/customers/_all_customers.html.erb
+++ b/app/views/customers/_all_customers.html.erb
@@ -1,7 +1,7 @@
 <table>
   <thead>
     <tr>
-      <th>Client name</th>
+      <th>Client Name</th>
       <th>Latest Request</th>
       <th></th>
      
@@ -12,8 +12,6 @@
     <% @customers.each do |customer| %>
       <tr>
         <td><%= link_to customer.company_name, customer %></td>
-        <%#= customer.requests.last.created%>
-        <!-- I don't know how to get this right now -->
         <td><%= link_to customer.requests.chronological.last.date.to_s + ' - ' + customer.requests.chronological.last.contact_firstname + ' ' + customer.requests.chronological.last.contact_lastname, customer.requests.chronological.last %></td>
         <!-- Make this an icon later -->
         <td><%= link_to '>', customer%></td>
