added note on note

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :image %><br>
+    <%= f.label :image, 'Image - 5 MB Max Image Size' %><br>
     <%= f.file_field :image %>
   </div>
 
