--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -12,8 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :request_id %><br>
-    <%= f.collection_select :request_id, Request.chronological.all, :id, :date, prompt: "Select request..." %>
+    <%= f.hidden_field :request_id %>
   </div>
 
   <div class="field">
