--- a/app/views/walkthroughs/_form.html.erb
+++ b/app/views/walkthroughs/_form.html.erb
@@ -20,7 +20,7 @@
     </div>
 
 
-    <%= f.input :created_at, as: :string, input_html: { class: 'datepicker', placeholder: "Enter date"}, label: "Date of Walkthrough" %>
+    <%= f.input :date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter date", readonly:"readonly"}, label: "Date of Walkthrough" %>
 
 
 
