--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -5,7 +5,28 @@
 	<div class="add_button"><%= link_to 'Update Client', edit_customer_path(@customer), class: 'button tiny left ' %></div>
 </div>
 
-
+<% if !@requests.empty? %>
+	<table>
+		<thead>
+			<tr>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>Title</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @requests.each do |r| %>
+				<tr>
+					<td width="200"><%= r.contact_firstname %></td>
+					<td width="150"><%= r.contact_lastname %></td>
+					<td width="100"><%= r.title %></td>
+				</tr>
+			<% end %>
+		</tbody>
+	</table>
+<% else %>
+	<p> There are no waste entries.</p>
+<% end %> 
 
 <div class="small-12 columns">
     <%= render 'customer_requests' %>
