--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -12,11 +12,12 @@
   <% end %>
 
   <div class="small-12 medium-6 columns">
-    <h1>New Request</h1>
+    <h1>Request</h1>
   </div>
 
   <div class="small-12 medium-6 columns">
     <div class="actions">
+      <%= link_to 'Cancel', request_path(@request), class: 'button' %>
       <%= f.submit "Save Request", class: 'button' %>
     </div>
   </div>
