--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -140,5 +140,28 @@
       </div>
     </div>
 
+    <div class="sticky-footer">
+    <%#= render 'bottom_bar' %>
+      <div class="fixed-bottom  show-for-medium-down">
+        <nav class="top-bar bottom-bar" >
+          <section class="top-bar-section">
+            <%= link_to new_note_path do %>
+              <div class="bottom-button">
+                Add Note
+              </div>
+            <%end%>
+
+            <div class="bottom-button save-button">
+              Save
+            </div>
+             <!-- <ul class="left">
+          <li><%#=link_to 'Add Note', new_note_path, class: "button bottom_button"%></li>
+          <li><%#=link_to 'Save', new_note_path, class: "button bottom_button"%></li>
+      </ul> -->
+      </section>
+      </nav>
+    </div>
+  </div> 
+
 <!--  -->
 <% end %>
