--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -18,7 +18,7 @@
   <div class="small-12 medium-6 columns">
     <div class="actions">
       <%= link_to 'Cancel', request_path(@request), class: 'button' %>
-      <%= f.submit "Save Request", class: 'button' %>
+      <%= f.submit "Save", class: 'button' %>
     </div>
   </div>
 
