--- a/app/views/audits/_form.html.erb
+++ b/app/views/audits/_form.html.erb
@@ -19,13 +19,53 @@
           
           <div class="reqid" style="display: none;">
            <%= audit_form.input :request_id, input_html: {value: @req_id} %>  
-           </div>         
-           <%= audit_form.input :start_date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter Start Date", readonly:"readonly"}, label: 'Start Date' %>
-           <%= audit_form.input :end_date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter End Date", readonly:"readonly"}, label: 'End Date' %>
-           <%= audit_form.input :generator, :collection => ['Landfill', 'Recycle', 'Compost'], :as => :radio_buttons, label: 'Generator' %>
-           <%= audit_form.label :location %><br>       
-           <%= audit_form.text_field :location %>
+           </div> 
 
+          <div class="row">
+            <div class="small-12 columns">
+              <label>Generator</label>
+            </div>
+          </div>
+
+          <div class="field row">
+            <div class="small-12 medium-4 columns">
+              <%= audit_form.input :generator, :collection => ['Landfill'], :as => :radio_buttons, label: "" %>
+            </div>
+
+            <div class="small-12 medium-4 columns">
+              <%= audit_form.input :generator, :collection => ['Recycle'], :as => :radio_buttons, label: "" %>
+            </div>
+
+            <div class="small-12 medium-4 columns">
+              <%= audit_form.input :generator, :collection => ['Compost'], :as => :radio_buttons, label: "" %>
+            </div>
+          </div>  
+          <br>
+
+          <div class="row">
+            <div class="small-12 columns">
+              <label>Time Period</label>
+            </div>
+          </div>
+          <div class="field row">
+            <div class="small-12 medium-6 columns">
+              <%= audit_form.input :start_date, as: :string, input_html: { class: 'datepicker', placeholder: "Select Start Date", readonly:"readonly"}, label: 'Start' %>
+            </div>
+            <div class="small-12 medium-6 columns">
+              <%= audit_form.input :end_date, as: :string, input_html: { class: 'datepicker', placeholder: "Select End Date", readonly:"readonly"}, label: 'End' %>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="small-12 columns">
+              <label>Location</label>
+            </div>
+            <div class="field row">
+              <div class="small-12 medium-6 columns">      
+                <%= audit_form.text_field :location, placeholder: "Enter location..." %>
+              </div>
+            </div>
+          </div>
         </fieldset>
       </div>
 
@@ -36,9 +76,16 @@
         <%= simple_nested_form_for @audit do |f| %>
            <%= f.fields_for :wastes do |waste_form| %>
               <%= waste_form.hidden_field :audit_id, input_html: {value: @aud_id}%>
-              Material Type:<%= waste_form.select :material_type, ["Batteries", "Cardboard", "Compostable Food Service Ware", "Dairy and Juice Containers", "Electronic Waste", "Fluorescent Tubes", "Food Scraps", "Metal Cans, Glass Bottles, and Jars", "Miscellaneous", "Mixed Paper, Newspaper & Magazines", "Mylar Film", "Paper Towels", "Plastic (1-5 & 7) and Containers", "Plastic Film", "Restroom Waste", "Reuse (Clothes, books, pens, etc.)", "Toner Cartridges", "White Ledger Paper"], prompt: "Select material type..." %>
-              Weight: <%= waste_form.text_field :weight %>
-              Origin:<%= waste_form.text_field :origin %>
+              <div class="row">
+                <div class="small-12 medium-4 columns">
+                  <%= waste_form.select :material_type, ["Batteries", "Cardboard", "Compostable Food Service Ware", "Dairy and Juice Containers", "Electronic Waste", "Fluorescent Tubes", "Food Scraps", "Metal Cans, Glass Bottles, and Jars", "Miscellaneous", "Mixed Paper, Newspaper & Magazines", "Mylar Film", "Paper Towels", "Plastic (1-5 & 7) and Containers", "Plastic Film", "Restroom Waste", "Reuse (Clothes, books, pens, etc.)", "Toner Cartridges", "White Ledger Paper"], prompt: "Select material type..." %>
+                </div>
+                <div class="small-12 medium-4 columns">
+                  <%= waste_form.text_field :weight, placeholder: "Enter weight (lbs)..." %>
+                </div>
+                <div class="small-12 medium-4 columns">
+                  <%= waste_form.text_field :origin, placeholder: "Enter origin..." %>
+                </div>
           <% end %>
           <p><%= f.link_to_add "+ Add an item", :wastes, class: 'button round tiny left' %></p>          <% end %> 
           <p>
