--- a/app/views/audits/new.html.erb
+++ b/app/views/audits/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New audit</h1>
-
 <%= render 'form' %>
 
-<%= link_to 'Back', audits_path %>
+<%= link_to 'Back', audits_path, :class => 'button' %>
