linked recent request to request page

--- a/app/views/home/_recent_requests.html.erb
+++ b/app/views/home/_recent_requests.html.erb
@@ -8,8 +8,8 @@
   <% requests.each do |request| %>
     <tr>
       <!-- How do I get the company name of request??? -->
-      <td><%= link_to request.customer.company_name, requests_path(request) %></td>
-      <td><%= link_to request.date.strftime('%b %e, %Y'), requests_path(request)%></td>
+      <td><%= link_to request.customer.company_name, request %></td>
+      <td><%= link_to request.date.strftime('%b %e, %Y'), request%></td>
       <td>></td>
       
       
