fixed visited links for customer and notes form

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -16,6 +16,8 @@
     <%= f.text_field :company_name %>
   </div>
   <div class="actions">
+    <div class = "a" %>
     <%= f.submit "Add Client", class: 'button small' %>
+  </div>
   </div>
 <% end %>
