--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -26,6 +26,6 @@
     <%= f.text_area :description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save", class: 'button'%>
   </div>
 <% end %>
