--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,27 +1,77 @@
 
 <!-- Main div for displaying most recent requests -->
-<div class="small-12 medium-12 large-7 columns">
-	<h1>Recent Requests</h1>
-	<!-- Show latest requests that have been issued -->
-	<%= render :partial => "recent_requests", locals: { requests: @requests } %>
-
-</div>
 
 
 
 
-<!-- Right column displays recently added clients and documents -->
-<div class=" large-5 columns">
-	<div class="row">
-		<div class="small-12 columns">
-			<h4>Recent Audits</h4>
-			<%= render :partial => "recent_audits", locals: { audits: @audits } %>
+	<div class="small-12 columns">
+		<h2>Getting Started</h2>
+
+		<div class="getting_started_container content-padding">
+			<div class="row">
+				
+				<!-- option 1 -->
+				<%=link_to new_customer_path do %>
+					<div class="small-12 medium-4 columns">
+						<h4>Add a New Client</h4>
+					</div>
+				<% end %>
+
+				<!-- option 2 -->
+				<%=link_to new_request_path do %>
+					<div class="small-12 medium-4 columns">
+						<h4>Add a Request to an Existing Client</h4>
+					</div>
+				<% end %>
+
+				<!-- option 3 -->
+				<%=link_to requests_path do %>
+					<div class="small-12 medium-4 columns">
+						<h4>Update an Ongoing Request</h4>
+					</div>
+				<% end %>
+
+
+
+			</div>
+
+
+			
+
+					
 		</div>
 
+
 	</div>
-	
 
-	
 
-</div>
+	<!-- <fieldset> -->
+
+		<div class="small-12 medium-12 large-7 columns">
+			<h2>Recent Requests</h2>
+			<!-- Show latest requests that have been issued -->
+			<%= render :partial => "recent_requests", locals: { requests: @requests } %>
+
+		</div>
+
+
+
+
+		<!-- Right column displays recently added clients and documents -->
+		<div class=" large-5 columns">
+			<div class="row">
+				<div class="small-12 columns">
+					<h3>Recent Audits</h3>
+					<%= render :partial => "recent_audits", locals: { audits: @audits } %>
+				</div>
+
+			</div>
+			
+
+			
+
+		</div>
+	<!-- </fieldset> -->
+
+
 
