--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -22,6 +22,7 @@
 		</p>
 
 		<%= link_to 'Edit', edit_note_path(@note), class: "button" %> 
-		<%= link_to 'Back', notes_path , class: "button" %>
+        <td><%= link_to 'Delete', :note, method: :delete, data: { confirm: 'Are you sure?' }, class: "button" %></td>		
+        <%= link_to 'Back to Request', request_path(@note.request_id), class: "button" %>
 
 </div>
