--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,8 +47,20 @@ table{
 
 .getting_started_container{
 	width:100%;
-  	background-color: rgba(15, 52, 15, 0.2);
+  	background-color: rgba(15, 52, 15, 0.07);
+  	border-style:solid;
+  	border-color: rgba(15, 52, 15, 0.3);
+  	border-width: 1px;
+  	border-radius: 4px;
   	text-align:center;
+}
+
+.option{
+	background-color: rgba(15, 52, 15, 0.2);
+	margin: 1em 1.8em 1.8em 1.8em;
+	padding: 2em 2em;
+	border-style: solid;
+	border-radius: 10px;
 }
 
 
