added New Client button to nav bar

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -22,9 +22,13 @@
         <!-- Left Nav Section -->
         <ul class="left">
           <li class="has-form">
+            <%= link_to 'New Client', new_customer_path, :class => "button" %>
+          </li>
+          <li class="has-form">
             <%= link_to 'New Request', new_request_path, :class => "button" %>
             
           </li>
+          
         </ul>
       </section>
     </nav>
