added Generator to audit link on request page

--- a/app/views/requests/_docs_by_request.html.erb
+++ b/app/views/requests/_docs_by_request.html.erb
@@ -16,7 +16,7 @@
 
         <%else%>
           <tr>
-            <td width="300"><%=link_to " Audit - " + doc.created_at.strftime('%b %e, %Y'), doc %> </td>
+            <td width="300"><%=link_to doc.generator + " Audit - " + doc.created_at.strftime('%b %e, %Y'), doc %> </td>
             
             <td>></td>
 
