fixed merge conflict in stylesheets

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,7 +38,7 @@ table{
 .title:visited{
 	color: white;
 }
-********************/
+/*********************/
 /*Styling for top info on home page*/
 /********************/
 
