fixed links on request index page

--- a/app/views/requests/_all_requests.html.erb
+++ b/app/views/requests/_all_requests.html.erb
@@ -11,9 +11,9 @@
   <tbody>
     <% @requests.each do |request| %>
       <tr>
-        <td><%= link_to request.customer.company_name, customer_path(request.customer) %></td>
-        <td><%= request.date.strftime('%b %e, %Y') %></td>
-        <td><%= mail_to request.email, request.contact_firstname + ' ' + request.contact_lastname %></td>
+        <td><%= link_to request.customer.company_name, request%></td>
+        <td><%= link_to request.date.strftime('%b %e, %Y'), request %></td>
+        <td><%= link_to request.contact_firstname + ' ' + request.contact_lastname, request %></td>
         <td><%= link_to '>', request %></td>
       </tr>
     <% end %>
