--- a/app/views/audits/_form.html.erb
+++ b/app/views/audits/_form.html.erb
@@ -26,24 +26,29 @@
     <div class="row">
       <div class="span7">
         <fieldset>
-          <legend><%= controller.action_name.capitalize %> Audit</legend>
+          <legend>Audit Details</legend>
           
           <div class="reqid" style="display: none;">
            <%= audit_form.input :request_id, input_html: {value: @req_id} %>  
-           </div>         
-           <%= audit_form.input :start_date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter Start Date"}, label: false %>
-           <%= audit_form.input :end_date, as: :string, input_html: { class: 'datepicker', placeholder: "Enter End Date"}, label: false %>
-           <%= audit_form.label :generator %><br>
-           <%= audit_form.input :generator, :collection => ['Landfill', 'Recycle', 'Compost'], :as => :radio_buttons, label: '' %>
-           <%= audit_form.label :location %><br>       
-           <%= audit_form.text_field :location %>
+           </div> 
 
+          <div class="row">
+            <div class="small-12 columns">
+              <label>* Generator</label>
+            </div>
+          </div>
+
+          <div class="field row">
             <div class="small-12 medium-4 columns">
-              <%= audit_form.input :generator, :collection => ['Recycle'], :as => :radio_buttons, label: "" %>
+              <%= audit_form.input :generator, :collection => ['Landfill'], :as => :radio_buttons, label: "", required: false %>
             </div>
 
             <div class="small-12 medium-4 columns">
-              <%= audit_form.input :generator, :collection => ['Compost'], :as => :radio_buttons, label: "" %>
+              <%= audit_form.input :generator, :collection => ['Recycle'], :as => :radio_buttons, label: "", required: false %>
+            </div>
+
+            <div class="small-12 medium-4 columns">
+              <%= audit_form.input :generator, :collection => ['Compost'], :as => :radio_buttons, label: "", required: false %>
             </div>
           </div>  
           <br>
