--- a/app/views/audits/_form.html.erb
+++ b/app/views/audits/_form.html.erb
@@ -71,32 +71,33 @@
         </fieldset>
       </div>
 
-      <div class="small-12 medium-6 columns">
-  <div class="actions">
-    <%= audit_form.submit "Save Audit", class: 'button' %>
-  </div>
-</div>
-
-    <div class="span5">
+    <div class="row">
       <fieldset>
       <legend>Waste Items</legend>
         <div id="wastes">
-        <%= simple_nested_form_for @audit do |f| %>
-           <%= f.fields_for :wastes do |waste_form| %>
+          <%= simple_nested_form_for @audit do |f| %>
+            <%= f.fields_for :wastes do |waste_form| %>
               <%= waste_form.hidden_field :audit_id, input_html: {value: @aud_id}%>
-              Material Type:<%= waste_form.select :material_type, ["Batteries", "Cardboard", "Compostable Food Service Ware", "Dairy and Juice Containers", "Electronic Waste", "Fluorescent Tubes", "Food Scraps", "Metal Cans, Glass Bottles, and Jars", "Miscellaneous", "Mixed Paper, Newspaper & Magazines", "Mylar Film", "Paper Towels", "Plastic (1-5 & 7) and Containers", "Plastic Film", "Restroom Waste", "Reuse (Clothes, books, pens, etc.)", "Toner Cartridges", "White Ledger Paper"], prompt: "Select material type..." %>
-              Weight: <%= waste_form.text_field :weight %>
-              Origin:<%= waste_form.text_field :origin %>
-          <% end %>
-          <p><%= f.link_to_add "+ Add an item", :wastes, class: 'button round tiny left' %></p>          <% end %> 
-          <p>
-            <br /><%#= audit_form.link_to_add("Add Item", :wastes, :class => 'button tiny') %>
-          </p>
+              <div class="row">
+                <div class="small-12 medium-5 columns">
+                  <%= waste_form.select :material_type, ["Batteries", "Cardboard", "Compostable Food Service Ware", "Dairy and Juice Containers", "Electronic Waste", "Fluorescent Tubes", "Food Scraps", "Metal Cans, Glass Bottles, and Jars", "Miscellaneous", "Mixed Paper, Newspaper & Magazines", "Mylar Film", "Paper Towels", "Plastic (1-5 & 7) and Containers", "Plastic Film", "Restroom Waste", "Reuse (Clothes, books, pens, etc.)", "Toner Cartridges", "White Ledger Paper"], prompt: "Select material type..." %>
+                </div>
+                <div class="small-4 medium-2 columns">
+                  <%= waste_form.text_field :weight, placeholder: "Weight (lbs)..." %>
+                </div>
+                <div class="small-8 medium-5 columns">
+                  <%= waste_form.text_field :origin, placeholder: "Enter origin..." %>
+                </div>
+              </div>
+            <% end %>
+            <p><%= f.link_to_add "+ Add an item", :wastes, class: 'button round tiny left' %></p>         
+          <% end %> 
         </div> 
-        </fieldset>
+      </fieldset>
+    </div>
+    <div class="small-12 medium-6 columns">
+      <div class="actions">
+        <%= audit_form.submit "Save Audit", class: 'button' %>
       </div>
     </div>
-
-
-
 <% end %>
